--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
 a {
 	-webkit-tap-highlight-color: transparent;
 }
